fix: fixed layout for all pages to comply with the expanding/collapsing sidebar
#33

--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -75,10 +75,18 @@ body {
   width: 100%;
 }
 
-.rightContainer {
+#rightContainer {
   display: flex;
   width: 100%;
   justify-content: center;
+  transition: padding 0.3s ease-in-out;
+}
+
+.rightContainerCollapsed {
+  padding-left: 5rem;
+}
+
+.rightContainerExpanded {
   padding-left: 16rem;
 }
 
